[gd_scene load_steps=63 format=3 uid="uid://b4vwelxgqjxuj"]

[ext_resource type="Script" uid="uid://d22c4qrkj8mus" path="res://Scripts/menu_2.gd" id="1_tswe5"]
[ext_resource type="Texture2D" uid="uid://d262qnt35tnot" path="res://Assets/arcadetransi2.png" id="2_bshng"]
[ext_resource type="Texture2D" uid="uid://bx8b21phuybjc" path="res://Assets/menu.png" id="2_fowjw"]
[ext_resource type="Texture2D" uid="uid://vjfxnogk6j7d" path="res://Assets/advtransi2.png" id="2_oe6um"]
[ext_resource type="Texture2D" uid="uid://oggpriwqe8mj" path="res://Assets/lvl1map.png" id="3_ipgxo"]
[ext_resource type="Texture2D" uid="uid://c7s53u2tg2kp4" path="res://Assets/advtransi3.png" id="3_nyjjj"]
[ext_resource type="Texture2D" uid="uid://bmfa41ds2wtob" path="res://Assets/holdadv.png" id="3_t4ga0"]
[ext_resource type="Texture2D" uid="uid://bdbxcs5aa6spa" path="res://Assets/arcadetransi3.png" id="3_tqwv3"]
[ext_resource type="Texture2D" uid="uid://bjk7i2owoeeag" path="res://Assets/advtransi4.png" id="4_5d5tm"]
[ext_resource type="Texture2D" uid="uid://kmjtkp7l55ry" path="res://Assets/arcadetransi4.png" id="4_avmnu"]
[ext_resource type="Texture2D" uid="uid://rqpucnoib4ix" path="res://Assets/holdearcade.png" id="4_dymys"]
[ext_resource type="Texture2D" uid="uid://dvlwc152tyoi7" path="res://Assets/lvl1map2.png" id="4_i317a"]
[ext_resource type="Texture2D" uid="uid://br2f4tigw3ec8" path="res://Assets/holdplay.png" id="5_4rk10"]
[ext_resource type="Texture2D" uid="uid://doxml7bjh1klm" path="res://Assets/holdquit.png" id="5_dv7xs"]
[ext_resource type="Texture2D" uid="uid://dpdubwxtm2lfi" path="res://Assets/clicklvl1.png" id="5_ituvx"]
[ext_resource type="Texture2D" uid="uid://bndjctw51aego" path="res://Assets/advtransi5.png" id="5_qogm5"]
[ext_resource type="Texture2D" uid="uid://d03avpa1g3fbo" path="res://Assets/arcadetransi5.png" id="5_r6gu3"]
[ext_resource type="Texture2D" uid="uid://bxbailo8riac0" path="res://Assets/holdplay2.png" id="6_0qo56"]
[ext_resource type="Texture2D" uid="uid://b4vos5dchffer" path="res://Assets/mapquit.png" id="6_jkb07"]
[ext_resource type="Texture2D" uid="uid://3l4fcw5wfvxv" path="res://Assets/advtransi6.png" id="6_l7gtd"]
[ext_resource type="Texture2D" uid="uid://d1uard75xqdx8" path="res://Assets/arcadetransi6.png" id="6_q8lhg"]
[ext_resource type="Texture2D" uid="uid://dgqctgsvnlhke" path="res://Assets/clicklvl2.png" id="6_yxofq"]
[ext_resource type="Texture2D" uid="uid://4t7ltknpw6mb" path="res://Assets/arcadetransi7.png" id="7_d7s3m"]
[ext_resource type="Texture2D" uid="uid://dsowwihb32tyt" path="res://Assets/holdplay3.png" id="7_imrui"]
[ext_resource type="Texture2D" uid="uid://b1j02ha3x0fgj" path="res://Assets/advtransi7.png" id="7_rpsw4"]
[ext_resource type="Texture2D" uid="uid://b8xfxtw237bpr" path="res://Assets/clicklvl3.png" id="7_tj5yo"]
[ext_resource type="Texture2D" uid="uid://cir5iek1rxmbd" path="res://Assets/clicklvl4.png" id="8_06vqn"]
[ext_resource type="Texture2D" uid="uid://ch2da0maxju78" path="res://Assets/holdplay4.png" id="8_h01b4"]
[ext_resource type="Texture2D" uid="uid://bx2ifywsnjhho" path="res://Assets/holdquit2.png" id="8_jh4p8"]
[ext_resource type="Texture2D" uid="uid://dj6qacb3qqvx0" path="res://Assets/arcadetransi8.png" id="8_qd32f"]
[ext_resource type="Texture2D" uid="uid://b0droj7vte476" path="res://Assets/advtransi8.png" id="8_qpjqo"]
[ext_resource type="Texture2D" uid="uid://jqn3wkfwq2iy" path="res://Assets/clicklvl5.png" id="9_3l1j6"]
[ext_resource type="Texture2D" uid="uid://cr0abmbbc7e1e" path="res://Assets/holdplay5.png" id="9_x8h31"]
[ext_resource type="Texture2D" uid="uid://bt37x88ctsmh7" path="res://Assets/arcadetransi9.png" id="9_y5eya"]
[ext_resource type="Texture2D" uid="uid://b3j03fmifj6kd" path="res://Assets/advtransi9.png" id="9_y8qc6"]
[ext_resource type="Texture2D" uid="uid://cnw4ltmqfvbby" path="res://Assets/clickup1.png" id="10_06vqn"]
[ext_resource type="Texture2D" uid="uid://dirbqp5ywqg48" path="res://Assets/holdplay6.png" id="10_do80l"]
[ext_resource type="Texture2D" uid="uid://tb8s3aoc1b1f" path="res://Assets/arcadetransi10.png" id="10_ptrmw"]
[ext_resource type="Texture2D" uid="uid://cmiiofei3ap8t" path="res://Assets/advtransi10.png" id="10_xcvxq"]
[ext_resource type="Texture2D" uid="uid://can784ewt4hor" path="res://Assets/clickup2.png" id="11_3l1j6"]
[ext_resource type="Texture2D" uid="uid://dvu8jgkxeiify" path="res://Assets/arcadetransi11.png" id="11_eh6no"]
[ext_resource type="Texture2D" uid="uid://t0tho4pu24so" path="res://Assets/advtransi11.png" id="11_fg7uq"]
[ext_resource type="Texture2D" uid="uid://dh2jxxg8v2lyq" path="res://Assets/clickup3.png" id="12_6umdb"]
[ext_resource type="Texture2D" uid="uid://wy8me402bhlv" path="res://Assets/arcadetransi12.png" id="12_8yud0"]
[ext_resource type="Texture2D" uid="uid://dyh8dggjie53i" path="res://Assets/advtransi12.png" id="12_aos05"]
[ext_resource type="Texture2D" uid="uid://36spr0syktf0" path="res://Assets/lvl2map.png" id="13_6umdb"]
[ext_resource type="Texture2D" uid="uid://rvvxdru268vs" path="res://Assets/advtransi13.png" id="13_7g45v"]
[ext_resource type="Texture2D" uid="uid://dwboahanjpm7y" path="res://Assets/lvl2map2.png" id="14_shx1t"]
[ext_resource type="Texture2D" uid="uid://c1phb10ysa3xk" path="res://Assets/clicklvl12.png" id="15_noesh"]
[ext_resource type="Texture2D" uid="uid://b2v6827cyvcfe" path="res://Assets/clicklvl22.png" id="16_f45g1"]
[ext_resource type="Texture2D" uid="uid://su7larwgf7rt" path="res://Assets/clicklvl23.png" id="17_t4ga0"]
[ext_resource type="Texture2D" uid="uid://dlr52goly2hp4" path="res://Assets/clicklvl42.png" id="18_dymys"]
[ext_resource type="Texture2D" uid="uid://cben2sgpe2jy2" path="res://Assets/clicklvl52.png" id="19_ijbv1"]
[ext_resource type="Texture2D" uid="uid://f7ikqfbxt7ue" path="res://Assets/clickup32.png" id="22_625h5"]
[ext_resource type="Texture2D" uid="uid://bgv32awarjc60" path="res://Assets/clickup12.png" id="23_dv7xs"]
[ext_resource type="Texture2D" uid="uid://belyedl4vkkhe" path="res://Assets/clickup22.png" id="24_jkb07"]
[ext_resource type="Texture2D" uid="uid://dcdlfnylncs07" path="res://Assets/menuplay.png" id="29_jh4p8"]
[ext_resource type="Texture2D" uid="uid://cqkwuhdyv8rv6" path="res://Assets/holdquit.2.png" id="37_k8xwn"]
[ext_resource type="AudioStream" uid="uid://hw5daec2xiit" path="res://SFX/menu-button-89141.mp3" id="59_oe6um"]
[ext_resource type="AudioStream" uid="uid://v88pfp08ki4n" path="res://SFX/adventure.mp3" id="60_nyjjj"]
[ext_resource type="AudioStream" uid="uid://bxy1gumddc0hx" path="res://SFX/arcade.mp3" id="61_5d5tm"]

[sub_resource type="SpriteFrames" id="SpriteFrames_tmtf3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_oe6um")
}, {
"duration": 1.0,
"texture": ExtResource("3_nyjjj")
}, {
"duration": 1.0,
"texture": ExtResource("4_5d5tm")
}, {
"duration": 1.0,
"texture": ExtResource("5_qogm5")
}, {
"duration": 1.0,
"texture": ExtResource("6_l7gtd")
}, {
"duration": 1.0,
"texture": ExtResource("7_rpsw4")
}, {
"duration": 1.0,
"texture": ExtResource("8_qpjqo")
}, {
"duration": 1.0,
"texture": ExtResource("9_y8qc6")
}, {
"duration": 1.0,
"texture": ExtResource("10_xcvxq")
}, {
"duration": 1.0,
"texture": ExtResource("11_fg7uq")
}, {
"duration": 1.0,
"texture": ExtResource("12_aos05")
}, {
"duration": 1.0,
"texture": ExtResource("13_7g45v")
}],
"loop": true,
"name": &"adventuretransition",
"speed": 5.5
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_bshng")
}, {
"duration": 1.0,
"texture": ExtResource("3_tqwv3")
}, {
"duration": 1.0,
"texture": ExtResource("4_avmnu")
}, {
"duration": 1.0,
"texture": ExtResource("5_r6gu3")
}, {
"duration": 1.0,
"texture": ExtResource("6_q8lhg")
}, {
"duration": 1.0,
"texture": ExtResource("7_d7s3m")
}, {
"duration": 1.0,
"texture": ExtResource("8_qd32f")
}, {
"duration": 1.0,
"texture": ExtResource("9_y5eya")
}, {
"duration": 1.0,
"texture": ExtResource("10_ptrmw")
}, {
"duration": 1.0,
"texture": ExtResource("11_eh6no")
}, {
"duration": 1.0,
"texture": ExtResource("12_8yud0")
}],
"loop": true,
"name": &"arcadetransi",
"speed": 5.5
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_fowjw")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_t4ga0")
}],
"loop": true,
"name": &"holdadv",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_dymys")
}],
"loop": true,
"name": &"holdarcade",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_4rk10")
}],
"loop": true,
"name": &"holdplay",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_0qo56")
}],
"loop": true,
"name": &"holdplay2",
"speed": 0.3
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_imrui")
}, {
"duration": 1.0,
"texture": ExtResource("8_h01b4")
}, {
"duration": 1.0,
"texture": ExtResource("9_x8h31")
}, {
"duration": 1.0,
"texture": ExtResource("10_do80l")
}],
"loop": true,
"name": &"holdplay3",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_dv7xs")
}],
"loop": true,
"name": &"holdquit",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_jkb07")
}],
"loop": true,
"name": &"holdquit2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_jh4p8")
}, {
"duration": 1.0,
"texture": ExtResource("37_k8xwn")
}],
"loop": true,
"name": &"holdquitt",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_ipgxo")
}, {
"duration": 1.0,
"texture": ExtResource("4_i317a")
}],
"loop": true,
"name": &"lvl1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_ituvx")
}, {
"duration": 1.0,
"texture": ExtResource("6_yxofq")
}, {
"duration": 1.0,
"texture": ExtResource("7_tj5yo")
}, {
"duration": 1.0,
"texture": ExtResource("8_06vqn")
}, {
"duration": 1.0,
"texture": ExtResource("9_3l1j6")
}],
"loop": true,
"name": &"lvl1down",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_06vqn")
}, {
"duration": 1.0,
"texture": ExtResource("10_06vqn")
}, {
"duration": 1.0,
"texture": ExtResource("11_3l1j6")
}, {
"duration": 1.0,
"texture": ExtResource("12_6umdb")
}, {
"duration": 1.0,
"texture": ExtResource("12_6umdb")
}, {
"duration": 1.0,
"texture": ExtResource("12_6umdb")
}, {
"duration": 1.0,
"texture": ExtResource("12_6umdb")
}, {
"duration": 1.0,
"texture": ExtResource("12_6umdb")
}, {
"duration": 1.0,
"texture": ExtResource("12_6umdb")
}, {
"duration": 1.0,
"texture": ExtResource("12_6umdb")
}, {
"duration": 1.0,
"texture": ExtResource("12_6umdb")
}, {
"duration": 1.0,
"texture": ExtResource("12_6umdb")
}, {
"duration": 1.0,
"texture": ExtResource("12_6umdb")
}],
"loop": true,
"name": &"lvl1up",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("12_6umdb")
}],
"loop": true,
"name": &"lvl1upp",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("13_6umdb")
}, {
"duration": 1.0,
"texture": ExtResource("14_shx1t")
}],
"loop": true,
"name": &"lvl2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("15_noesh")
}, {
"duration": 1.0,
"texture": ExtResource("16_f45g1")
}, {
"duration": 1.0,
"texture": ExtResource("17_t4ga0")
}, {
"duration": 1.0,
"texture": ExtResource("18_dymys")
}, {
"duration": 1.0,
"texture": ExtResource("19_ijbv1")
}],
"loop": true,
"name": &"lvl2down",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("23_dv7xs")
}, {
"duration": 1.0,
"texture": ExtResource("23_dv7xs")
}, {
"duration": 1.0,
"texture": ExtResource("24_jkb07")
}, {
"duration": 1.0,
"texture": ExtResource("22_625h5")
}, {
"duration": 1.0,
"texture": ExtResource("22_625h5")
}, {
"duration": 1.0,
"texture": ExtResource("22_625h5")
}, {
"duration": 1.0,
"texture": ExtResource("22_625h5")
}, {
"duration": 1.0,
"texture": ExtResource("22_625h5")
}, {
"duration": 1.0,
"texture": ExtResource("22_625h5")
}, {
"duration": 1.0,
"texture": ExtResource("22_625h5")
}],
"loop": true,
"name": &"lvl2up",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("13_7g45v")
}],
"loop": true,
"name": &"map",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("29_jh4p8")
}, {
"duration": 1.0,
"texture": ExtResource("12_8yud0")
}],
"loop": true,
"name": &"play",
"speed": 2.0
}]

[node name="Menu2" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_tswe5")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = -1
anchor_right = 0.997
anchor_bottom = 1.0
offset_right = 1.92004
color = Color(0.181798, 0.181798, 0.181798, 1)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
process_mode = 3
texture_filter = 1
position = Vector2(334, 180)
scale = Vector2(0.997656, 1.00139)
sprite_frames = SubResource("SpriteFrames_tmtf3")
animation = &"map"
frame_progress = 0.36974955

[node name="Quitter" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = 258.0
offset_top = 275.0
offset_right = 355.0
offset_bottom = 307.0
text = "Quitter
"

[node name="map" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = 172.0
offset_top = 101.0
offset_right = 440.0
offset_bottom = 162.0
text = "map
"
flat = true

[node name="arcade" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = 200.0
offset_top = 177.0
offset_right = 413.0
offset_bottom = 208.0
text = "arcade"
flat = true

[node name="lvl1" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 282.0
offset_top = 61.0
offset_right = -333.0
offset_bottom = -274.0
grow_horizontal = 2
grow_vertical = 2

[node name="lvl2" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = 216.0
offset_top = 104.0
offset_right = 241.0
offset_bottom = 129.0

[node name="play" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = 244.0
offset_top = 174.0
offset_right = 369.0
offset_bottom = 212.0

[node name="button" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("59_oe6um")

[node name="adventure" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("60_nyjjj")
parameters/looping = true

[node name="arcade2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("61_5d5tm")

[connection signal="mouse_entered" from="Quitter" to="." method="_on_quitter_mouse_entered"]
[connection signal="mouse_exited" from="Quitter" to="." method="_on_quitter_mouse_exited"]
[connection signal="pressed" from="Quitter" to="." method="_on_quitter_pressed"]
[connection signal="mouse_entered" from="map" to="." method="_on_map_mouse_entered"]
[connection signal="mouse_exited" from="map" to="." method="_on_map_mouse_exited"]
[connection signal="pressed" from="map" to="." method="_on_map_pressed"]
[connection signal="mouse_entered" from="arcade" to="." method="_on_arcade_mouse_entered"]
[connection signal="mouse_exited" from="arcade" to="." method="_on_arcade_mouse_exited"]
[connection signal="pressed" from="arcade" to="." method="_on_arcade_pressed"]
[connection signal="button_down" from="lvl1" to="." method="_on_lvl_1_button_down"]
[connection signal="button_up" from="lvl1" to="." method="_on_lvl_1_button_up"]
[connection signal="mouse_entered" from="lvl1" to="." method="_on_lvl_1_mouse_entered"]
[connection signal="mouse_exited" from="lvl1" to="." method="_on_lvl_1_mouse_exited"]
[connection signal="pressed" from="lvl1" to="." method="_on_lvl_1_pressed"]
[connection signal="mouse_entered" from="lvl2" to="." method="_on_lvl_2_mouse_entered"]
[connection signal="mouse_exited" from="lvl2" to="." method="_on_lvl_2_mouse_exited"]
[connection signal="pressed" from="lvl2" to="." method="_on_lvl_2_pressed"]
[connection signal="mouse_entered" from="play" to="." method="_on_play_mouse_entered"]
[connection signal="mouse_exited" from="play" to="." method="_on_play_mouse_exited"]
[connection signal="pressed" from="play" to="." method="_on_play_pressed"]
